--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-# VITE_BACKEND_URL=http://localhost:5000/api
-VITE_BACKEND_URL=https://interviewready-a0p4.onrender.com/api
+VITE_BACKEND_URL=http://localhost:5000/api
+# VITE_BACKEND_URL=https://interviewready-a0p4.onrender.com/api
