--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "Backend for Interview Ready Platform",
   "main": "src/server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "seed": "node src/utils/seedData.js",
+    "seed1": "node src/utils/seedData.js",
+    "seed": "node src/seedData.js",
+
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
