--- a/admin/package.json
+++ b/admin/package.json
@@ -23,7 +23,8 @@
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
